doc/paper/tst/jalangi_test/RESULTS_V2/global_only/timeResultsLyaNOWITH.txt
The name of file 3d-cube.js

real	15m19.514s
user	15m30.620s
sys	0m6.256s
The name of file 3d-morph.js

real	0m29.584s
user	0m29.540s
sys	0m0.092s
The name of file 3d-raytrace.js

real	0m3.078s
user	0m3.204s
sys	0m0.028s
The name of file access-binary-trees.js

real	0m0.794s
user	0m0.792s
sys	0m0.012s
The name of file access-fannkuch.js

real	0m0.564s
user	0m0.552s
sys	0m0.012s
The name of file access-nbody.js

real	0m15.491s
user	0m15.484s
sys	0m0.072s
The name of file access-nsieve.js

real	0m0.338s
user	0m0.308s
sys	0m0.036s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.216s
user	0m0.216s
sys	0m0.000s
The name of file bitops-bits-in-byte.js

real	0m0.401s
user	0m0.396s
sys	0m0.004s
The name of file bitops-bitwise-and.js

real	0m0.246s
user	0m0.232s
sys	0m0.012s
The name of file bitops-nsieve-bits.js

real	0m0.336s
user	0m0.332s
sys	0m0.004s
The name of file controlflow-recursive.js

real	0m0.368s
user	0m0.364s
sys	0m0.008s
The name of file crypto-aes.js

real	0m4.619s
user	0m4.552s
sys	0m0.168s
The name of file crypto-md5.js

real	0m0.343s
user	0m0.368s
sys	0m0.004s
The name of file crypto-sha1.js

real	0m0.330s
user	0m0.316s
sys	0m0.016s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/gntousakis/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:153:32)
    at Date.formatDate (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:363:26)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:378:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)

real	0m0.072s
user	0m0.064s
sys	0m0.008s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/gntousakis/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:106:22)
    at Object.<anonymous> (/home/gntousakis/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:497:28)
    at Object.apply (/home/gntousakis/lya/core/src/txfm.js:300:22)
    at Module._compile (module.js:653:30)
    at Object.Module._extensions..js (module.js:664:10)
    at Module.load (module.js:566:32)
    at tryModuleLoad (module.js:506:12)
    at Function.Module._load (module.js:498:3)
    at Module.require (module.js:597:17)

real	0m0.073s
user	0m0.064s
sys	0m0.008s
The name of file math-cordic.js

real	0m0.466s
user	0m0.472s
sys	0m0.012s
The name of file math-partial-sums.js

real	0m38.733s
user	0m38.912s
sys	0m0.156s
The name of file math-spectral-norm.js

real	0m0.410s
user	0m0.404s
sys	0m0.012s
The name of file regexp-dna.js

real	0m0.811s
user	0m0.792s
sys	0m0.020s
The name of file string-base64.js

real	0m13.506s
user	0m13.468s
sys	0m0.068s
The name of file string-fasta.js

real	0m1.198s
user	0m1.192s
sys	0m0.028s
The name of file string-tagcloud.js

real	0m6.079s
user	0m6.140s
sys	0m0.068s
The name of file string-unpack-code.js

real	0m4.628s
user	0m4.628s
sys	0m0.028s
The name of file string-validate-input.js

real	0m0.117s
user	0m0.116s
sys	0m0.008s
